# heatlab

./: .gitignore  HeatmapLabeller.spec  README.md  heatmaplabeller.py  pyinstaller.txt  pyproject.toml
examples/: results_example.h5
heatlab/: __init__.py  application.py  assets.py  io.py  segmenters.py  utils.py  widgets.py
